[project]
name = "topino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "huggingface-hub>=0.34.4",
    "imutils>=0.5.4",
    "jupyter>=1.1.1",
    "lab>=8.4",
    "marimo>=0.15.2",
    "opencv-python>=4.12.0.88",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "rich>=14.1.0",
    "ruff>=0.13.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "typer>=0.17.4",
]
